# pylook

./: .buildinfo  .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
_downloads/778de3f583d5ccd291108fdbb3a33398/: p655_run_r_file.ipynb
_downloads/96192b0e365c480274f1f14c6e4faa20/: p655_pure_python.py
_downloads/aca26f224104dcbdfff19af6315fec2f/: p655_run_r_file.py
_downloads/dd46ed4d80fdc961898b020ee28285f2/: p655_pure_python.ipynb
_sources/api/: index.rst.txt
_sources/examples/: index.rst.txt  p655_pure_python.rst.txt  p655_run_r_file.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
api/: index.html
docs/: conf.py  index.rst
docs/_templates/autosummary/: module.rst
examples/: README.txt  index.html  p655_pure_python.html  p655_pure_python.py  p655_run_r_file.html  p655_run_r_file.py  sg_execution_times.html
pylook/: __init__.py  _version.py  cbook.py  package_tools.py  static-data-manifest.txt  testing.py  units.py
pylook/calc/: __init__.py  basic.py
pylook/io/: __init__.py  lookfiles.py
staticdata/: p655_r
tests/calc/: test_basic.py
tests/io/: test_lookfiles.py
