[metadata]
name = pylook
description = Tools for analysis of experimental rock mechanics data.
long_description = file: README.md
long_description_content_type = text/markdown
author = John Leeman
author_email = john@leemangeophysical.com
maintainer = Leeman Geophysical LLC
maintainer_email = john@leemangeophysical.com
license = MIT
license-file = LICENSE
platform = any
keywords = geology, geophysics
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
url = https://github.com/leemangeophysicalllc/pylook

[flake8]
max-line-length = 95
application-import-names = pylook
import-order-style = google
copyright-check = True
copyright-author = Leeman Geophysical LLC
inline-quotes = single
multiline-quotes = double
rst-roles = class, data, func, meth, mod
rst-directives = plot
docstring-convention = numpy
ignore = RST902 W503
per-file-ignores = examples/*.py: D T003 T001

[tool:pytest]
# https://github.com/matplotlib/pytest-mpl/issues/69
markers = mpl_image_compare
norecursedirs = build docs .idea
doctest_optionflags = NORMALIZE_WHITESPACE
mpl-results-path = test_output
show-capture = False
