[metadata]
name = pylook
description = Tools for analysis of experimental rock mechanics data.
long_description = file: README.md
long_description_content_type = text/markdown
author = John Leeman
author_email = support@leemangeophysical.com
maintainer = Leeman Geophysical LLC
maintainer_email = support@leemangeophysical.com
license = BSD 3-Clause
license-file = LICENSE
platform = any
keywords = geology, geophysics
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
url = https://github.com/leemangeophysicalllc/pylook
project_urls =
    Documentation = https://leemangeophysicalllc.github.io/pylook/
    Release Notes = https://github.com/leemangeophysicalllc/pylook/releases
    Bug Tracker = https://github.com/leemangeophysicalllc/pylook/issues
    Source Code = https://github.com/leemangeophysicalllc/pylook

[options]
zip_safe = True
packages = find:
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.6
install_requires =
    importlib_metadata>=1.0.0; python_version < '3.8'
    importlib_resources>=1.3.0; python_version < '3.9'
    numpy>=1.16.0
    pandas>=0.22.0
    pint>=0.10.1
    pooch>=0.1

[flake8]
max-line-length = 95
application-import-names = pylook
import-order-style = google
copyright-check = True
copyright-author = Leeman Geophysical LLC
inline-quotes = single
multiline-quotes = double
rst-roles = class, data, func, meth, mod
rst-directives = plot
docstring-convention = numpy
ignore = RST902 W503
per-file-ignores = examples/*.py: D T003 T001 E402 I100 I202

[tool:pytest]
# https://github.com/matplotlib/pytest-mpl/issues/69
markers = mpl_image_compare
norecursedirs = build docs .idea
doctest_optionflags = NORMALIZE_WHITESPACE
mpl-results-path = test_output
show-capture = False

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all-files = True
